--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="container">
+  <div class="jumbotron home-jumbotron">
+    <h1>Project Manager</h1> 
+    <p>Welcome to Project Manager!</p> 
+  </div>
+</div>
