Added index and edit pages to views/projects and modified the _project_form partial.

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Projects#edit</h1>
-<p>Find me in app/views/projects/edit.html.erb</p>
+<div class = 'container'>
+	<h2>Edit Project</h2>
+	<%= render 'project_form' %>
+</div>
