--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -7,8 +7,8 @@
 			<%= f.label :description %> 
 		  <%= f.text_area :description, class: 'form-control'  %>
 
-		  <%= f.label :due %>: 
-			<%= f.text_field :due_date, class: 'form-control'  %>			  
+		  <%= f.label :due_date %>: 
+			<%= f.date_field :due_date, class: 'form-control'  %>			  
 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
