--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,2 +1,30 @@
-<h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
+<div class = 'container'>
+	<h2>Projects</h2>
+	<table class = 'table'>
+		<thead>
+	    <tr>
+	    	<th>Name</th>
+	    	<th>Description</th>
+	      <th>Due Date</th>
+	      <th></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+		  <%= @projects.each do |project| %>
+			  <tr>
+				  <td><%= project.name %></td>
+				  <td><%= project.description %></td>
+				  <td><%= project.due_date %></td>
+				  <td>
+				  	<div class="btn-group btn-group-xs">
+							<%= link_to 'View', project_path(event), class: "btn" %>
+							<%= link_to 'Edit', edit_project_path(event), class: "btn" %>
+							<%= link_to 'Delete', project, data: { confirm: "Are you sure you wish to delete this project?" }, 
+																						 method: :delete, class: "btn" %>
+						</div>
+					</td>
+				</tr>
+			<% end %>
+	  </tbody>
+	</table>
+</div>
