Added pry-byebug to gemfile

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container'>
-	<h2><%= project.name  %></h2>
-	<p><%= project.description %></p>
-	<p><%= project.due_date %></p>
+	<h2>Project: <%= @project.name  %></h2>
+	<p>Description: <%= @project.description %></p>
+	<p>Due Date: <%= @project.due_date %></p>
 </div>
