--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -1,6 +1,5 @@
-<form role="form">
   <div class="form-group">
-		<%= form_for @project do |f| %>
+		<%= form_for Project.new do |f| %>
 			<%= f.label :name	 %> 
 		  <%= f.text_field :name, class: 'form-control' %>
 
@@ -13,4 +12,3 @@
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
 	</div>
-</form>
