--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,15 +10,15 @@
 	    </tr>
 	  </thead>
 	  <tbody>
-		  <%= @projects.each do |project| %>
+		  <% @projects.each do |project| %>
 			  <tr>
 				  <td><%= project.name %></td>
 				  <td><%= project.description %></td>
 				  <td><%= project.due_date %></td>
 				  <td>
 				  	<div class="btn-group btn-group-xs">
-							<%= link_to 'View', project_path(event), class: "btn" %>
-							<%= link_to 'Edit', edit_project_path(event), class: "btn" %>
+							<%= link_to 'View', project_path(project), class: "btn" %>
+							<%= link_to 'Edit', edit_project_path(project), class: "btn" %>
 							<%= link_to 'Delete', project, data: { confirm: "Are you sure you wish to delete this project?" }, 
 																						 method: :delete, class: "btn" %>
 						</div>
