Added tests for Project Model, Projects Controller and Static pages controller

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,10 +4,12 @@
       <a><%= link_to "Project Manager", root_path, class: 'navbar-brand' %></a>
     </div>
     <div>
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><%=  link_to "Home", root_path %></li>
         <li><%=  link_to "Index", projects_path %></li>
         <li><%=  link_to "New", new_project_path %></li>
+        <li><%=  link_to "About", about_path %></li>
+        <li><%=  link_to "Contact", contact_path %></li>
       </ul>
     </div>
   </div>
