--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<<div class="container">
+  <div class="jumbotron home-jumbotron">
+    <h1>About Project Manager</h1> 
+    <p>Project Manager is an app that is being developed by the DevPoint Labs spring 2015 cohort.</p> 
+  </div>
+</div>
