--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,8 +6,7 @@
     <div>
       <ul class="nav navbar-nav navbar-right">
         <li><%=  link_to "Home", root_path %></li>
-        <li><%=  link_to "Index", projects_path %></li>
-        <li><%=  link_to "New", new_project_path %></li>
+        <li><%=  link_to "Projects", projects_path %></li>
         <li><%=  link_to "About", about_path %></li>
         <li><%=  link_to "Contact", contact_path %></li>
       </ul>
