Added link to create new project on projects index page

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,6 @@
 <div class = 'container'>
 	<h2>Projects</h2>
+	<%=  link_to "Create New Project", new_project_path%>
 	<table class = 'table'>
 		<thead>
 	    <tr>
