Changed the content of the Home page, added link to create a new project

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="jumbotron home-jumbotron">
     <h1>Project Manager</h1> 
-    <p>Welcome to Project Manager!</p> 
+    <p>Welcome to Project Manager!</p>
+    <p><%=  link_to "Create", new_project_path%> a project and take control of your project management!</p> 
   </div>
 </div>
