Put flash messages in div with class container

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	<body>
 		<%= render 'layouts/navbar' %>
 		<% flash.each do |key, value| %>
-			<div class="alert alert-<%= key %>"><%= value %></div>
+			<div class="container alert alert-<%= key %>"><%= value %></div>
 		<% end %>
 		<%= yield %>
 	</body>
