--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,6 +7,7 @@
 	    	<th>Name</th>
 	    	<th>Description</th>
 	      <th>Due Date</th>
+	      <th>Time left</th>
 	      <th></th>
 	    </tr>
 	  </thead>
@@ -16,6 +17,7 @@
 				  <td><%= project.name %></td>
 				  <td><%= project.description %></td>
 				  <td><%= project.due_date %></td>
+				  <td><%= distance_of_time_in_words_to_now(project.due_date) %></td>
 				  <td>
 				  	<div class="btn-group btn-group-xs">
 							<%= link_to 'View', project_path(project), class: "btn" %>
