--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="container navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a><%= link_to "Project Manager", root_path, class: 'navbar-brand' %></a>
