Updated index table head to indicate that times are displayed in mountain time

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,7 +6,7 @@
 	    <tr>
 	    	<th>Name</th>
 	    	<th>Description</th>
-	      <th>Due Date</th>
+	      <th>Due Date(Mountain Time)</th>
 	      <th>Time left</th>
 	      <th></th>
 	    </tr>
