Added some styling to project forms

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,6 @@
 <div class = 'container'>
-	<h2>New Project</h2>
-	<%= render 'project_form' %>
+  <div class = 'col-sm-6'>
+		<h2>New Project</h2>
+		<%= render 'project_form' %>
+	</div>
 </div>
