--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,7 +46,7 @@
 
     <h3>Cancel my account</h3>
 
-    <p>Unhappy with project manager? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+    <p>Unhappy with project manager? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn user-btn" %></p>
 
     <%= link_to "Back", :back %>
   </div>
