--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,6 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%=  link_to "Home", root_path %></li>
         <li><%=  link_to "Projects", projects_path %></li>
+        <li><%=  link_to "Users", users_index_path %></li>
         <li><%=  link_to "About", about_path %></li>
         <li><%=  link_to "Contact", contact_path %></li>
         <li class="dropdown">
