--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,9 @@
 <div class = 'container'>
-
+	<h2> All Users</h2>
+	<% @users.each do |user| %>
+	<div class = 'col-sm-4'>
+		<h3>User: <%= user.first_name%> <%= current_user.last_name %></h3>
+		<h3>Email: <%= user.email%></h3> 
+	</div>
+	<% end %>
 </div>
