--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class = 'container'>
-	<h1>Users#show</h1>
-	<p>Find me in app/views/users/show.html.erb</p>
+	<h2><%= @user.first_name%>'s' Profile</h2>
+	<h3>Name: <%= @user.first_name%> <%= current_user.last_name %></h3>
+	<h3>Email: <%= @user.email%></h3>
 </div>
