--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,9 @@
 	<h2> All Users</h2>
 	<% @users.each do |user| %>
 	<div class = 'col-sm-4'>
-		<h3>User: <%= user.first_name%> <%= current_user.last_name %></h3>
-		<h3>Email: <%= user.email%></h3> 
+		<h3>User: <%= user.first_name%> <%= user.last_name %></h3>
+		<h3>Email: <%= user.email%></h3>
+		<h4><%= link_to 'View Profile', users_show_path(user) %></h4>
 	</div>
 	<% end %>
 </div>
