--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%=  link_to "Home", root_path %></li>
         <li><%=  link_to "Projects", projects_path %></li>
-        <li><%=  link_to "Users", users_index_path %></li>
+        <li><%=  link_to "Users", users_path %></li>
         <li><%=  link_to "About", about_path %></li>
         <li><%=  link_to "Contact", contact_path %></li>
         <li class="dropdown">
@@ -18,7 +18,7 @@
             <% if !user_signed_in? %>
               <li><%= link_to "Sign in", new_user_session_path %></li>
             <% else %>
-              <li><%= link_to "Profile", users_profile_path %></li>
+              <li><%= link_to "Profile", profile_path %></li>
               <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
               <li class="divider"></li>
               <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
