--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container'>
-	<h2><%= @user.first_name%>'s' Profile</h2>
+	<h2><%= @user.first_name%>'s Profile</h2>
 	<h3>Name: <%= @user.first_name%> <%= @user.last_name %></h3>
 	<h3>Email: <%= @user.email%></h3>
 </div>
