--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,5 +1,5 @@
 <div class = 'container'>
-	<h2><%= current_user.first_name%>'s' Profile</h2>
+	<h2><%= current_user.first_name%>'s Profile</h2>
 	<h3>Name: <%= current_user.first_name%> <%= current_user.last_name %></h3>
 	<h3>Email: <%= current_user.email%></h3>
 </div>
