--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,7 +23,7 @@
           <tr>
             <td><%= task.name %></td>
             <td><%= task.description %></td>
-            <td><%= task.due_date %></td>
+            <td><%= task.due_date.strftime("%B %d, %Y") %></td>
             <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
             <td>
               <div class="btn-group btn-group-xs">
