--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,13 +17,23 @@
 				  <td><%= project.name %></td>
 				  <td><%= project.description %></td>
 				  <td><%= project.due_date.strftime("%B %d, %Y") %></td>
+				  <% if :complete == true %>
+				 		<td><%= puts "Completed!" %></td>
+				 	<% else %>	
 				  <td><%= distance_of_time_in_words_to_now(project.due_date) %></td>
+				 <% end %> 
 				  <td>
 				  	<div class="btn-group btn-group-xs">
 							<%= link_to 'View', project_path(project), class: "btn" %>
 							<%= link_to 'Edit', edit_project_path(project), class: "btn" %>
 							<%= link_to 'Delete', project, data: { confirm: "Are you sure you wish to delete this project?" }, 
 																						 method: :delete, class: "btn" %>
+							<span><%= form_for project do |f| %>
+                <%= f.check_box :complete %>
+                <%= f.label :complete %>
+                <%= f.submit %>  
+                <% end %>             															 
+							</span>	
 						</div>
 					</td>
 				</tr>
