--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -7,7 +7,11 @@
 		  <%= f.text_area :description, class: 'form-control'  %>
 
 		  <%= f.label :due_date %> 
-			<%= f.datetime_select :due_date, class: 'form-control'  %>			  
+			<%= f.datetime_select :due_date, class: 'form-control'  %>
+
+			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>
+
+			<%= f.hidden_field :project_id, value: project.id, class: 'form-control'  %>
 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
