--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -11,7 +11,7 @@
 
 			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>
 
-			<%= f.hidden_field :project_id, value: project.id, class: 'form-control'  %>
+			<%= f.hidden_field :project_id, value: @project.id, class: 'form-control'  %>
 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
