--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -9,8 +9,9 @@
 		  <%= f.label :due_date %> 
 			<%= f.datetime_select :due_date, class: 'form-control'  %>
 
+			<% if @project.user_id == nil %>
 			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>	  
-
+			<% end %>
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
 	</div>
