--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,6 +8,7 @@
 	    	<th>Description</th>
 	      <th>Due Date(Mountain Time)</th>
 	      <th>Time left</th>
+	      <th>Creator</th>
 	      <th></th>
 	    </tr>
 	  </thead>
@@ -18,6 +19,7 @@
 				  <td><%= project.description %></td>
 				  <td><%= project.due_date.strftime("%B %d, %Y") %></td>
 				  <td><%= distance_of_time_in_words_to_now(project.due_date) %></td>
+				  <td><%= project.user.first_name %> <%= project.user.last_name %></td>
 				  <td>
 				  	<div class="btn-group btn-group-xs">
 							<%= link_to 'View', project_path(project), class: "btn" %>
