--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,7 @@
 			  <tr>
 				  <td><%= project.name %></td>
 				  <td><%= project.description %></td>
-				  <td><%= project.due_date.strftime("%B %d, %Y") %></td>
+				  <td><%= project.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
 				  <td><%= distance_of_time_in_words_to_now(project.due_date) %></td>
 				  <td><%= project.user.first_name %> <%= project.user.last_name %></td>
 				  <td>
