--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <div class = 'container'>
 	<h2>Project: <%= @project.name  %></h2>
 	<p>Description: <%= @project.description %></p>
-	<p>Due Date: <%= @project.due_date %></p>
+	<p>Due Date: <%= @project.due_date.strftime("%B %d, %Y, %I:%M %P") %></p>
 
   <h2>
   Tasks: 
@@ -23,7 +23,7 @@
           <tr>
             <td><%= task.name %></td>
             <td><%= task.description %></td>
-            <td><%= task.due_date.strftime("%B %d, %Y") %></td>
+            <td><%= task.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
             <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
             <td>
               <div class="btn-group btn-group-xs">
