--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -11,8 +11,10 @@
 			
 			<%= f.hidden_field :project_id, value: @project.id, class: 'form-control'  %>
 
-			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>
-
+			<% if @project.user_id == nil %>
+			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>	  
+			<% end %>
+		  
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
 	</div>
