--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,6 +16,7 @@
           <th>Due Date(Mountain Time)</th>
           <th>Time left</th>
           <th>Creator</th>
+          <th>Assigned to</th>
           <th></th>
         </tr>
       </thead>
@@ -27,6 +28,7 @@
             <td><%= task.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
             <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
             <td><%= task.user.first_name %> <%= task.user.last_name %></td>
+            <td><%= task.assignee.first_name %> <%= task.assignee.last_name %></td>
             <td>
               <div class="btn-group btn-group-xs">
                 <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
