--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,7 +15,7 @@
           <th>Description</th>
           <th>Due Date(Mountain Time)</th>
           <th>Time left</th>
-          <th></th>
+          <th>Priority</th>
         </tr>
       </thead>
       <tbody>
@@ -25,12 +25,19 @@
             <td><%= task.description %></td>
             <td><%= task.due_date.strftime("%B %d, %Y") %></td>
             <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
+            <td><%= task.priority %> </td>
             <td>
               <div class="btn-group btn-group-xs">
                 <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
                 <%= link_to 'Delete', project_task_path(@project, task), data: { confirm: "Are you sure?" }, 
-                                               method: :delete, class: "btn" %>   
-                
+                                               method: :delete, class: "btn" %>
+                <span><%= form_for @project do |f| %>
+                <%= f.label :complete %>
+                <%= f.check_box :complete %>
+                <%= f.select :priority, Task.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>
+                <%= f.submit %>  
+                <% end %>                                                                              
+                </span>
               </div>
             </td>
           </tr>
