--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -7,7 +7,10 @@
 		  <%= f.text_area :description, class: 'form-control'  %>
 
 		  <%= f.label :due_date %> 
-			<%= f.datetime_select :due_date, class: 'form-control'  %>			  
+			<%= f.datetime_select :due_date, class: 'form-control'  %>	
+
+			<%= f.label :priority %>
+			<%= f.select :priority, Task.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>		  
 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
