--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -14,7 +14,9 @@
           <th>Name</th>
           <th>Description</th>
           <th>Due Date(Mountain Time)</th>
+          <th>Priority</th>
           <th>Time left</th>
+          <th> Completed</th>
           <th></th>
         </tr>
       </thead>
@@ -24,7 +26,11 @@
             <td><%= task.name %></td>
             <td><%= task.description %></td>
             <td><%= task.due_date.strftime("%B %d, %Y") %></td>
+            <td><%= task.priority.humanize %></td>
             <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
+            <td> <%= task.complete %>
+            </td> 
+            
             <td>
               <div class="btn-group btn-group-xs">
                 <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
