--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -9,6 +9,19 @@
 		  <%= f.label :due_date %> 
 			<%= f.datetime_select :due_date, class: 'form-control'  %>			  
 
+			<div>
+      <%= f.label :priority %>
+      <%= f.select :priority, options_for_select(@priority.collect { |p| [p[0].humanize, p[0]] }, selected: @task.priority), {} , class: "form-control" %>
+    </div>
+
+    <div>
+    <%= f.label :complete %> 
+    
+     <%=f.check_box :complete    %>
+    
+     </div> 
+    
+     </div> 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
 	</div>
