--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,21 +25,14 @@
 				 	<% else %>	
 				  	<td><%= distance_of_time_in_words_to_now(project.due_date) %></td>
 				  <% end %> 
-				  <td><%= project.priority %></td>
+				  <td><%= project.priority.capitalize %></td>
 				  <td>
 				  	<div class="btn-group btn-group-xs">
 							<%= link_to 'View', project_path(project), class: "btn" %>
 							<%= link_to 'Edit', edit_project_path(project), class: "btn" %>
 							<%= link_to 'Delete', project, data: { confirm: "Are you sure you wish to delete this project?" }, 
 																						 method: :delete, class: "btn" %>
-						</div>
-						<span><%= form_for project do |f| %>
-              <%= f.check_box :complete %>
-              <%= f.label :complete %>
-              <%= f.select :priority, Project.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>
-              <%= f.submit %>  
-              <% end %>             															 
-						</span>	
+						</div>	
 					</td>
 				</tr>
 			<% end %>
