--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,23 +27,20 @@
             <td><%= task.name %></td>
             <td><%= task.description %></td>
             <td><%= task.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
-            <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
+            <% if task.complete == true %>
+              <td><%= "Completed!" %></td>
+            <% else %>  
+              <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
+            <% end %> 
             <td><%= task.user.first_name %> <%= task.user.last_name %></td>
             <td><%= task.assignee.first_name %> <%= task.assignee.last_name %></td>
-            <td><%= task.priority %> </td>
+            <td><%= task.priority.capitalize %> </td>
             <td>
               <div class="btn-group btn-group-xs">
                 <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
                 <%= link_to 'Delete', project_task_path(@project, task), data: { confirm: "Are you sure?" }, 
                                                method: :delete, class: "btn" %>
               </div>
-              <span><%= form_for @project do |f| %>
-                <%= f.label :complete %>
-                <%= f.check_box :complete %>
-                <%= f.select :priority, Task.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>
-                <%= f.submit %>  
-                <% end %>                                                                              
-              </span>
             </td>
           </tr>
         <% end %>
