--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -15,10 +15,12 @@
 		  		  
 		  <b>Assign to</b>
 		  <%= f.select(:assigned_user_id, @user_options) %>
-			<%= f.datetime_select :due_date, class: 'form-control'  %>	
 
 			<%= f.label :priority %>
-			<%= f.select :priority, Task.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>		  
+			<%= f.select :priority, Task.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>		
+
+			<%= f.label :complete %> 
+			<%= f.check_box :complete %>   
 
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
