--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,16 @@
 <div class = 'container'>
 	<h2> All Users</h2>
 	<% @users.each do |user| %>
-	<div class = 'col-sm-4'>
-		<h3>User: <%= user.first_name%> <%= user.last_name %></h3>
-		<h3>Email: <%= user.email%></h3>
-		<h4><%= link_to 'View Profile', user_path(user.id) %></h4>
+	<div class="col-md-4">
+    <div class="panel panel-default">
+        <div class="center panel-heading"
+    		<h3>User: <%= user.first_name%> <%= user.last_name %></h3>
+        </div>
+        <div class="panel-body">
+    		<h4>Email: <%= user.email%></h4>
+    		<h4><%= link_to 'View Profile', user_path(user.id) %></h4>
+        </div>
+    </div>
 	</div>
-	<% end %>
+<% end %>
 </div>
