--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,7 +29,7 @@
 				  <td>	
 				  	<div class="btn-group btn-group-xs">
 							<%= link_to 'View', project_path(project), class: "btn" %>
-							<% if current_user.id == project.user_id %>
+							<% if user_signed_in? && current_user.id == project.user_id %>
 								<%= link_to 'Edit', edit_project_path(project), class: "btn" %>
 								<%= link_to 'Delete', project, data: { confirm: "Are you sure you wish to delete this project?" }, 
 																						 method: :delete, class: "btn" %>
