--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -1,5 +1,5 @@
   <div class="form-group">
-		<%= form_for @project do |f| %>
+		<%= form_for project do |f| %>
 			<%= render 'devise/shared/error_messages', object: f.object %>
 			<%= f.label :name	 %> 
 		  <%= f.text_field :name, class: 'form-control' %>
@@ -14,10 +14,8 @@
 			<%= f.select :priority, Project.priorities.keys.map { |s| [s.humanize, s] }, class: "form-control" %>       		 
 			<%= f.label :complete %> 
 			<%= f.check_box :complete %> 
-
-			<% if @project.user_id == nil %>
+	
 			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>	  
-			<% end %>
 			
 		  <%= f.submit "Submit", class: "btn submit-btn"  %>
 		<% end %>
