--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
 <div class = 'container'>
   <div class = 'col-sm-6'>
 		<h2>Edit Project</h2>
-		<%= render 'project_form' %>
+		<%= render partial: 'project_form', locals: {:project => @project} %>
 	</div>
 </div>
