--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -50,7 +50,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Project</h4>
+        <h4 class="modal-title" id="myModalLabel">New Project</h4>
       </div>
       <div class="modal-body">
         <%= render partial: 'project_form', locals: {:project => Project.new} %>
