--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -2,8 +2,9 @@
 	<h2><%= current_user.first_name%>'s Profile</h2>
 	<h3>Name: <%= current_user.first_name%> <%= current_user.last_name %></h3>
 	<h3>Email: <%= current_user.email%></h3>
-</div>
-<table class = 'table'>
+
+  <h3>My projects</h3>
+  <table class = 'table'>
     <thead>
       <tr>
         <th>Name</th>
@@ -42,45 +43,46 @@
       <% end %>
     </tbody>
   </table>
+  <h3>My assigned tasks</h3>
   <table class = 'table'>
-      <thead>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Due Date(Mountain Time)</th>
+        <th>Time left</th>
+        <th>Creator</th>
+        <th>Assigned to</th>
+        <th>Priority</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @assigned_tasks.each do |task| %>
         <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Due Date(Mountain Time)</th>
-          <th>Time left</th>
-          <th>Creator</th>
-          <th>Assigned to</th>
-          <th>Priority</th>
-          <th></th>
+          <td><%= task.name %></td>
+          <td><%= task.description %></td>
+          <td><%= task.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
+          <% if task.complete == true %>
+            <td><%= "Completed!" %></td>
+          <% else %>  
+            <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
+          <% end %> 
+          <td><%= task.user.first_name %> <%= task.user.last_name %></td>
+          <td><%= task.assignee.first_name %> <%= task.assignee.last_name %></td>
+          <td><%= task.priority.capitalize %> </td>
+          <td>
+            <div class="btn-group btn-group-xs">
+              <% if current_user.id == task.assigned_user_id || current_user.id == task.user_id %>
+                <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
+                <%= link_to 'Delete', project_task_path(@project, task), data: { confirm: "Are you sure?" }, 
+                                               method: :delete, class: "btn" %>
+              <% end %>
+            </div>
+          </td>
         </tr>
-      </thead>
-      <tbody>
-        <% @assigned_tasks.each do |task| %>
-          <tr>
-            <td><%= task.name %></td>
-            <td><%= task.description %></td>
-            <td><%= task.due_date.strftime("%B %d, %Y, %I:%M %P") %></td>
-            <% if task.complete == true %>
-              <td><%= "Completed!" %></td>
-            <% else %>  
-              <td><%= distance_of_time_in_words_to_now(task.due_date) %></td>
-            <% end %> 
-            <td><%= task.user.first_name %> <%= task.user.last_name %></td>
-            <td><%= task.assignee.first_name %> <%= task.assignee.last_name %></td>
-            <td><%= task.priority.capitalize %> </td>
-            <td>
-              <div class="btn-group btn-group-xs">
-                <% if current_user.id == task.assigned_user_id || current_user.id == task.user_id %>
-                  <%= link_to 'Edit', edit_project_task_path(@project, task), class: "btn" %>
-                  <%= link_to 'Delete', project_task_path(@project, task), data: { confirm: "Are you sure?" }, 
-                                                 method: :delete, class: "btn" %>
-                <% end %>
-              </div>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+      <% end %>
+    </tbody>
+  </table>
 
 </div>
