--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,4 +1,4 @@
 <div class = 'container'>
   <h2>New Task</h2>
-  <%= render partial: 'tasks/task_form', locals: {:task => @project.tasks.build }%>
+  <%= render partial: 'tasks/task_form', locals: {:task => @task }%>
 </div>
