--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -11,7 +11,7 @@
 			<%= f.datetime_select :due_date, class: 'form-control'  %>
 			
 
-			<% if @task.user_id == nil || @task.user_id = current_user.id%>
+			<% if task.user_id == nil || task.user_id = current_user.id%>
 			<%= f.hidden_field :user_id, value: current_user.id, class: 'form-control'  %>	  
 			<% end %>
 		  		  
